<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <EditText
                android:id="@+id/etDEANumber"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/dea_number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etNPINumber"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/npi_number"
                android:textSize="18sp" />

            <com.veemed.veedoc.activities.widgets.SearchableSpinner
                android:id="@+id/searchSingleSpinner"
                style="@style/FormSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/states_list" />

            <AutoCompleteTextView
                android:id="@+id/etSpeciality"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/speciality"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPractice"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/practice"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <Button
                    android:id="@+id/btnPrevious"
                    style="@style/FormButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/btnComplete"
                    style="@style/FormButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/complete" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</layout>